[package]
name = "ripdu"
version = "0.1.3"
authors = ["Nikolajus Krauklis <nikolajus@gmail.com>"]
description = "ripdu is a command line disk usage utility - get back your space"
documentation = "https://github.com/dzhibas/ripdu"
homepage = "https://github.com/dzhibas/ripdu"
repository = "https://github.com/dzhibas/ripdu"
readme = "README.md"
keywords = ["du", "disk", "space", "usage"]
categories = ["command-line-utilities"]

[dependencies]
ignore = "0.4.17"
human-size = "0.3.0"
num_cpus = "1.8.0"
clap = "2.31.2"